--- a/themes/base-bootstrap/templates/cart/added.twig
+++ b/themes/base-bootstrap/templates/cart/added.twig
@@ -13,7 +13,7 @@
                     <div class="thumbnail">
                         <div class="pull-left" style="margin-right: 10px">
                             <a href="{{ productUrl(cartItem.product) }}">
-                                <img src="{{ cartItem.product.defaultImage }}" width="110" height="110" />
+                                <img src="{{ productImageUrl(cartItem.product) }}" width="110" height="110" />
                             </a>
                         </div>
                         <a href="{{ productUrl(cartItem.product) }}">
