--- a/themes/base-bootstrap/templates/checkout/complete.twig
+++ b/themes/base-bootstrap/templates/checkout/complete.twig
@@ -24,7 +24,7 @@
                     {% for orderItem in order.orderItems %}
                         <div class="row">
                             <div class="col-sm-2">
-                                <img src="{{ orderItem.product.defaultImage }}" width="48" height="48" />
+                                <img src="{{ productImageUrl(orderItem.product) }}" width="48" height="48" />
                             </div>
                             <div class="col-sm-10">
                                 <strong>I just bought: "{{ orderItem.product.name }}"</strong><br />
