--- a/themes/base-bootstrap/templates/helper/product-grid-small.twig
+++ b/themes/base-bootstrap/templates/helper/product-grid-small.twig
@@ -1,11 +1,7 @@
 {% for product in products %}
     <div class="product-container-small {% if lg_slim %}col-md-12{% endif %} col-sm-3 col-xs-6">
         <a href="{{ productUrl(product) }}">
-            {% if product.defaultImage is empty %}
-                <img src="http://lorempixel.com/640/480" style="height: 110px">
-            {% else %}
-                <img src="{{ product.defaultImage }}" style="height: 110px">
-            {% endif %}
+            <img src="{{ productImageUrl(product) }}" style="height: 110px">
         </a>
         <a href="{{ productUrl(product) }}">
             <div class="product-name">{{ product.name }}</div>
