--- a/themes/base-bootstrap/templates/tag/show.twig
+++ b/themes/base-bootstrap/templates/tag/show.twig
@@ -12,7 +12,7 @@
         <div class="row">
             {% if tag.defaultImage is not empty %}
                 <div class="col-sm-3">
-                    <img src="{{ tag.defaultImage }}"
+                    <img src="{{ tagImageUrl(tag) }}"
                         width="100"
                         height="100"
                         style="'width: 100px; height: 100px; margin: 18px"
