--- a/themes/base-foundation/templates/cart/show.twig
+++ b/themes/base-foundation/templates/cart/show.twig
@@ -23,7 +23,7 @@
                 <tr>
                     <td>
                         <a href="{{ productUrl(cartItem.product) }}">
-                            <img src="{{ cartItem.product.defaultImage }}" width="110" height="110"/>
+                            <img src="{{ productImageUrl(cartItem.product) }}" width="110" height="110"/>
                         </a>
                     </td>
                     <td>
