--- a/themes/base-foundation/templates/helper/product_grid.twig
+++ b/themes/base-foundation/templates/helper/product_grid.twig
@@ -4,7 +4,7 @@
         {% if product.defaultImage is empty %}
             <img src="//placehold.it/100x100&text=FallbackImg">
         {% else %}
-            <img src="{{ product.defaultImage }}">
+            <img src="{{ productImageUrl(product) }}">
         {% endif %}
     </a>
     <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
