--- a/themes/base-foundation/templates/helper/product_grid_small.twig
+++ b/themes/base-foundation/templates/helper/product_grid_small.twig
@@ -5,7 +5,7 @@
         {% if product.defaultImage is empty %}
             <img src="//placehold.it/100x100&text=FallbackImg">
         {% else %}
-            <img src="{{ product.defaultImage }}">
+            <img src="{{ productImageUrl(product) }}">
         {% endif %}
 
         <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
