--- a/themes/base/scss/_kommerce.scss
+++ b/themes/base/scss/_kommerce.scss
@@ -6,7 +6,8 @@
 @import "cart";
 @import "totals";
 @import "pagination";
-@import "product_grid";
+@import "product-grid";
+@import "tag-grid";
 @import "search";
 @import "checkout";
 @import "rating_stars";
