--- a/themes/base-bootstrap/templates/helper/tag-grid.twig
+++ b/themes/base-bootstrap/templates/helper/tag-grid.twig
@@ -1,5 +1,5 @@
 {% for tag in tags %}
-    <div class="product-container col-md-3 col-sm-4 col-xs-6">
+    <div class="tag-container col-md-3 col-sm-4 col-xs-6">
         <div class="center">
             <a href="{{ tagUrl(tag) }}">
                 <img src="{{ tagImageUrl(tag) }}"
@@ -9,7 +9,9 @@
             </a>
         </div>
         <a href="{{ tagUrl(tag) }}">
-            <h3 class="product-name">{{ tag.name }}</h3>
+            <div class="tag-name">{{ tag.name }}</div>
         </a>
+
+        <div class="clearfix"></div>
     </div>
 {% endfor %}
