--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -21,7 +21,7 @@
                         <thead>
                         <tr>
                             <th colspan="2">Item</th>
-                            <th class="cart-right">Total</th>
+                            <th class="text-right">Total</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -100,7 +100,7 @@
                                         {% endfor %}
                                     </div>
                                 </td>
-                                <td class="cart-right">
+                                <td class="text-right">
                                     {{ cartItem.price.quantityPrice | displayPrice }}
                                 </td>
                             </tr>
