Fixing productImageUrl typo.

--- a/themes/base-bootstrap/templates/helper/order-details.twig
+++ b/themes/base-bootstrap/templates/helper/order-details.twig
@@ -92,7 +92,7 @@
                     <tr>
                         <td style="width: 75px">
                             {% if orderitem.product is not null %}
-                                <img src="{{ productImgaeUrl(orderItem.product) }}">
+                                <img src="{{ productImageUrl(orderItem.product) }}">
                             {% endif %}
                         </td>
                         <td>
