--- a/themes/base-bootstrap/templates/layout/parts/head.twig
+++ b/themes/base-bootstrap/templates/layout/parts/head.twig
@@ -14,6 +14,7 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="{{ assetUrl('base-bootstrap', 'js/site.js') }}"></script>
 <script>
     $(function() {
         $("[data-toggle='tooltip']").tooltip();
