Auto-load macros that are defined in the templates theme hierarchy.

--- a/themes/base-bootstrap/templates/macros/orderStatus.twig
+++ b/themes/base-bootstrap/templates/macros/orderStatus.twig
@@ -1,6 +1,6 @@
 {# @var order \inklabs\kommerce\EntityDTO\OrderDTO #}
 
-{% macro statusLabel(order) %}
+{% macro label(order) %}
     {% if order.status.isPending %}
         {% set labelName = 'primary' %}
     {% elseif order.status.isProcessing or order.status.isShipped %}
