--- a/themes/base-bootstrap/templates/layout/parts/flash-messages.twig
+++ b/themes/base-bootstrap/templates/layout/parts/flash-messages.twig
@@ -1,7 +1,8 @@
 {# @var flashMessages array #}
 {# @var templateFlashMessages array #}
+{# @var flashFormErrors \Symfony\Component\Validator\ConstraintViolationInterface[] #}
 
-{% if flashMessages is not empty or templateFlashMessages is not empty %}
+{% if flashMessages is iterable or templateFlashMessages is iterable or flashFormErrors is iterable %}
     <div id="messages">
         <div class="container-fluid">
             <div class="row">
@@ -51,6 +52,19 @@
                             </div>
                         {% endfor %}
                     {% endfor %}
+
+                    {% if flashFormErrors is iterable %}
+                        <div class="alert alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <i class="fa fa-exclamation-circle pull-left"></i>
+
+                            <ul>
+                                {% for formError in flashFormErrors %}
+                                    <li>{{ formError.getPropertyPath() }} - {{ formError.getMessage() }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
