--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -118,68 +118,75 @@
                 </div>
                 <div class="col-sm-6">
                     <form action="{{ routeUrl('checkout.pay') }}" method="post" id="main-form" class="form" role="form">
-                        <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
+                        {{ form.csrf() }}
 
                         {% if user is defined %}
-                            <input type="hidden" name="shipping[userId]" value="{{ user.id }}" id="user_id">
+                            {{ form.hidden('shipping[userId]', user.id, 'user_id') }}
                         {% endif %}
 
                         <h2>Shipping</h2>
                         <div class="well">
                             <div class="row">
-                                <div class="form-group col-sm-6">
-                                    <label for="shipping-firstName" class="control-label">First Name</label>
-                                    <input type="text"
-                                           name="shipping[firstName]"
-                                           value="{{ shipping['firstName'] }}"
-                                           id="shipping-firstName"
-                                           class="form-control"
-                                           required=""
-                                           autofocus="">
-                                </div>
-                                <div class="form-group col-sm-6">
-                                    <label for="shipping-lastName" class="control-label">Last Name</label>
-                                    <input type="text"
-                                           name="shipping[lastName]"
-                                           value="{{ shipping['lastName'] }}"
-                                           id="shipping-lastName"
-                                           class="form-control"
-                                           required="">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'firstName',
+                                    shipping['firstName'],
+                                    'First Name',
+                                    'col-sm-6',
+                                    {
+                                        'required': '',
+                                        'autofocus': ''
+                                    }
+                                ) }}
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'lastName',
+                                    shipping['lastName'],
+                                    'Last Name',
+                                    'col-sm-6',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
-                                    <label for="shipping-company" class="control-label">Company Name <small class="text-muted">(optional)</small></label>
-                                    <input type="text"
-                                           name="shipping[company]"
-                                           value="{{ shipping['company'] }}"
-                                           id="shipping-company"
-                                           class="form-control">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'company',
+                                    shipping['company'],
+                                    'Company Name <small class="text-muted">(optional)</small>',
+                                    'col-sm-12',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
-                                    <label for="shipping-address1" class="control-label">Street Address</label>
-                                    <input type="text"
-                                           name="shipping[address1]"
-                                           value="{{ shipping['address1'] }}"
-                                           id="shipping-address1"
-                                           class="form-control"
-                                           required="">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'address1',
+                                    shipping['address1'],
+                                    'Street Address',
+                                    'col-sm-12',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
-                                    <label for="shipping-address2" class="control-label">Street Address 2 <small class="text-muted">(optional)</small></label>
-                                    <input type="text"
-                                           name="shipping[address2]"
-                                           value="{{ shipping['address2'] }}"
-                                           id="shipping-address2"
-                                           class="form-control"">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'address2',
+                                    shipping['address2'],
+                                    'Street Address 2 <small class="text-muted">(optional)</small>',
+                                    'col-sm-12',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
 
                             <div class="row">
@@ -197,54 +204,62 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-4">
-                                    <label for="shipping-city" class="control-label">City</label>
-                                    <input type="text"
-                                           name="shipping[city]"
-                                           value="{{ shipping['city'] }}"
-                                           id="shipping-city"
-                                           class="form-control"
-                                           required="">
-                                </div>
-                                <div class="form-group col-sm-4">
-                                    <label for="shipping-state" class="control-label">State</label>
-                                    <input type="text"
-                                           name="shipping[state]"
-                                           value="{{ shipping['state'] }}"
-                                           id="shipping-state"
-                                           class="form-control"
-                                           required="">
-                                </div>
-                                <div class="form-group col-sm-4">
-                                    <label for="shipping-zip5" class="control-label">Zipcode</label>
-                                    <input type="text"
-                                           name="shipping[zip5]"
-                                           value="{{ shipping['zip5'] }}"
-                                           id="shipping-zip5"
-                                           class="form-control"
-                                           required="">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'city',
+                                    shipping['city'],
+                                    'City',
+                                    'col-sm-4',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
+
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'state',
+                                    shipping['state'],
+                                    'State',
+                                    'col-sm-4',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
+
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'zip5',
+                                    shipping['zip5'],
+                                    'Zipcode',
+                                    'col-sm-4',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-6">
-                                    <label for="shipping-phone" class="control-label">Phone Number</label>
-                                    <input type="text"
-                                           name="shipping[phone]"
-                                           value="{{ shipping['phone'] }}"
-                                           id="shipping-phone"
-                                           class="form-control"
-                                           required="">
-                                </div>
-                                <div class="form-group col-sm-6">
-                                    <label for="shipping-email" class="control-label">Email Address</label>
-                                    <input type="email"
-                                           name="shipping[email]"
-                                           value="{{ shipping['email'] }}"
-                                           id="shipping-email"
-                                           class="form-control"
-                                           required="">
-                                </div>
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'phone',
+                                    shipping['phone'],
+                                    'Phone Number',
+                                    'col-sm-6',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
+
+                                {{ bootstrapForm.inputGroup(
+                                    'shipping',
+                                    'email',
+                                    shipping['email'],
+                                    'Email Address',
+                                    'col-sm-6',
+                                    {
+                                        'required': ''
+                                    }
+                                ) }}
                             </div>
                         </div>
 
@@ -253,47 +268,53 @@
                             <div class="well" id="billing-well">
                                 <span class="payment-errors"></span>
                                 <div class="row">
-                                    <div class="form-group col-sm-8">
-                                        <label for="creditCard-name" class="control-label">Name on Card</label>
-                                        <input type="text"
-                                               name="creditCard[name]"
-                                               value="{{ creditCard['name'] }}"
-                                               id="creditCard-name"
-                                               class="form-control"
-                                               required="">
-                                    </div>
-                                    <div class="form-group col-sm-4">
-                                        <label for="creditCard-zip5" class="control-label">Zipcode</label>
-                                        <input type="text"
-                                               name="creditCard[zip5]"
-                                               value="{{ creditCard['zip5'] }}"
-                                               id="creditCard-zip5"
-                                               class="form-control"
-                                               required="">
-                                    </div>
+                                    {{ bootstrapForm.inputGroup(
+                                        'creditCard',
+                                        'name',
+                                        creditCard['name'],
+                                        'Name on Card',
+                                        'col-sm-8',
+                                        {
+                                            'required': ''
+                                        }
+                                    ) }}
+
+                                    {{ bootstrapForm.inputGroup(
+                                        'creditCard',
+                                        'zip5',
+                                        creditCard['zip5'],
+                                        'Zipcode',
+                                        'col-sm-4',
+                                        {
+                                            'required': ''
+                                        }
+                                    ) }}
                                 </div>
 
                                 <div class="row">
-                                    <div class="form-group col-sm-9">
-                                        <label for="creditCard-number" class="control-label">Card Number</label>
-                                        <input type="text"
-                                               name="creditCard[number]"
-                                               value="{{ creditCard['number'] }}"
-                                               size="20"
-                                               id="creditCard-number"
-                                               class="form-control"
-                                               required="">
-                                    </div>
-                                    <div class="form-group col-sm-3">
-                                        <label for="creditCard-cvc" class="control-label">CVC</label>
-                                        <input type="text"
-                                               name="creditCard[cvc]"
-                                               value="{{ creditCard['cvc'] }}"
-                                               size="4"
-                                               id="creditCard-cvc"
-                                               class="form-control"
-                                               required="">
-                                    </div>
+                                    {{ bootstrapForm.inputGroup(
+                                        'creditCard',
+                                        'number',
+                                        creditCard['number'],
+                                        'Card Number',
+                                        'col-sm-9',
+                                        {
+                                            'required': '',
+                                            'size': '20'
+                                        }
+                                    ) }}
+
+                                    {{ bootstrapForm.inputGroup(
+                                        'creditCard',
+                                        'cvc',
+                                        creditCard['cvc'],
+                                        'CVC',
+                                        'col-sm-3',
+                                        {
+                                            'required': '',
+                                            'size': '4'
+                                        }
+                                    ) }}
                                 </div>
 
                                 <div class="row">
