Using dot notation for array access.

--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -130,7 +130,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'firstName',
-                                    shipping['firstName'],
+                                    shipping.firstName,
                                     'First Name',
                                     'col-sm-6',
                                     {
@@ -141,7 +141,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'lastName',
-                                    shipping['lastName'],
+                                    shipping.lastName,
                                     'Last Name',
                                     'col-sm-6',
                                     {
@@ -154,7 +154,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'company',
-                                    shipping['company'],
+                                    shipping.company,
                                     'Company Name <small class="text-muted">(optional)</small>',
                                     'col-sm-12',
                                     {
@@ -167,7 +167,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'address1',
-                                    shipping['address1'],
+                                    shipping.address1,
                                     'Street Address',
                                     'col-sm-12',
                                     {
@@ -180,7 +180,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'address2',
-                                    shipping['address2'],
+                                    shipping.address2,
                                     'Street Address 2 <small class="text-muted">(optional)</small>',
                                     'col-sm-12',
                                     {
@@ -203,7 +203,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'city',
-                                    shipping['city'],
+                                    shipping.city,
                                     'City',
                                     'col-sm-4',
                                     {
@@ -214,7 +214,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'state',
-                                    shipping['state'],
+                                    shipping.state,
                                     'State',
                                     'col-sm-4',
                                     {
@@ -225,7 +225,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'zip5',
-                                    shipping['zip5'],
+                                    shipping.zip5,
                                     'Zipcode',
                                     'col-sm-4',
                                     {
@@ -238,7 +238,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'phone',
-                                    shipping['phone'],
+                                    shipping.phone,
                                     'Phone Number',
                                     'col-sm-6',
                                     {
@@ -249,7 +249,7 @@
                                 {{ bootstrapForm.inputGroup(
                                     'shipping',
                                     'email',
-                                    shipping['email'],
+                                    shipping.email,
                                     'Email Address',
                                     'col-sm-6',
                                     {
@@ -267,7 +267,7 @@
                                     {{ bootstrapForm.inputGroup(
                                         'creditCard',
                                         'name',
-                                        creditCard['name'],
+                                        creditCard.name,
                                         'Name on Card',
                                         'col-sm-8',
                                         {
@@ -278,7 +278,7 @@
                                     {{ bootstrapForm.inputGroup(
                                         'creditCard',
                                         'zip5',
-                                        creditCard['zip5'],
+                                        creditCard.zip5,
                                         'Zipcode',
                                         'col-sm-4',
                                         {
@@ -291,7 +291,7 @@
                                     {{ bootstrapForm.inputGroup(
                                         'creditCard',
                                         'number',
-                                        creditCard['number'],
+                                        creditCard.number,
                                         'Card Number',
                                         'col-sm-9',
                                         {
@@ -303,7 +303,7 @@
                                     {{ bootstrapForm.inputGroup(
                                         'creditCard',
                                         'cvc',
-                                        creditCard['cvc'],
+                                        creditCard.cvc,
                                         'CVC',
                                         'col-sm-3',
                                         {
