--- a/base-theme/templates/helper/secure-logos.twig
+++ b/base-theme/templates/helper/secure-logos.twig
@@ -1,2 +1,2 @@
-<img src="{{ assetUrl('base', 'img/stripe-secure.png') }}" />
-<img src="{{ assetUrl('base', 'img/ssl-secure.png') }}" style="height: 150px" />
+<img src="{{ assetUrl('base-theme', 'img/stripe-secure.png') }}" />
+<img src="{{ assetUrl('base-theme', 'img/ssl-secure.png') }}" style="height: 150px" />
