--- a/themes/bootstrap/templates/checkout/pay.twig
+++ b/themes/bootstrap/templates/checkout/pay.twig
@@ -337,7 +337,7 @@
                                         }
                                     ) }}
                                     <div class="span6" id="accepted-cards">
-                                        <img src="{{ assetUrl('base', 'img/cards.png') }}" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
+                                        <img src="{{ assetUrl('base-theme', 'img/cards.png') }}" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
                                     </div>
                                 </div>
                             </div>
