Fixing required fields on checkout.

--- a/themes/bootstrap/templates/checkout/pay.twig
+++ b/themes/bootstrap/templates/checkout/pay.twig
@@ -156,10 +156,7 @@
                                     'company',
                                     shipping.company,
                                     'Company Name <small class="text-muted">(optional)</small>',
-                                    'col-sm-12',
-                                    {
-                                        'required': ''
-                                    }
+                                    'col-sm-12'
                                 ) }}
                             </div>
 
@@ -182,10 +179,7 @@
                                     'address2',
                                     shipping.address2,
                                     'Street Address 2 <small class="text-muted">(optional)</small>',
-                                    'col-sm-12',
-                                    {
-                                        'required': ''
-                                    }
+                                    'col-sm-12'
                                 ) }}
                             </div>
 
