Adding admin panel navigation.

--- a/themes/bootstrap/templates/layout/base-admin.twig
+++ b/themes/bootstrap/templates/layout/base-admin.twig
@@ -8,7 +8,7 @@
     } %}
 </head>
 <body>
-    {% include 'layout/parts/header.twig' %}
+    {% include 'layout/admin-parts/header.twig' %}
     {% include 'layout/parts/flash-messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
     <div id="body">
