--- a/themes/bootstrap/templates/admin/order/index.twig
+++ b/themes/bootstrap/templates/admin/order/index.twig
@@ -1,4 +1,4 @@
-{# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
+{# @var orders \inklabs\kommerce\EntityDTO\OrderDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
 {% extends 'layout/base-admin.twig' %}
 
@@ -9,10 +9,71 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1>Orders</h1>
+                <form action="{{ routeUrl('admin.order') }}"
+                      method="get"
+                      class="form-search">
+                    {% embed 'helper/search-bar.twig' with {'placeholder': 'Search SKU/Name'} only %}{% endembed %}
+                </form>
 
                 {{ paginate.detailed(pagination) }}
 
-                <h2>TODO</h2>
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Reference #</th>
+                            <th>User</th>
+                            <th>Status</th>
+                            <th class="hidden-xs">Total</th>
+                            <th>Ship To</th>
+                            <th class="hidden-xs">Email</th>
+                            <th class="hidden-xs">Created</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a href="{{ adminOrderUrl(order) }}">{{ order.referenceNumber }}</a>
+                                </td>
+                                <td>
+                                    {% if order.user is not null %}
+                                        {{ order.user.firstName }}
+                                        {{ order.user.lastName }}
+                                    {% endif %}
+                                </td>
+                                <td>{{ orderStatus.label(order) }}</td>
+                                <td class="hidden-xs">{{ order.total.total | displayPrice }}</td>
+                                <td>
+                                    {{ order.shippingAddress.firstName }}
+                                    {{ order.shippingAddress.lastName }}
+
+                                    {% if order.shippingAddress.city is not null %}
+                                        <span class="text-muted small">
+                                            (
+                                                {{- order.shippingAddress.city }},
+                                                {{ order.shippingAddress.state -}}
+                                            )
+                                        </span>
+                                    {% endif %}
+
+                                    <div class="visible-xs">
+                                        Total: {{ order.total.total | displayPrice }}<br>
+                                        <span class="small text-muted">E-mail:
+                                            {{ order.shippingAddress.email }}<br>
+                                        </span>
+                                        <span class="small text-muted">Created:
+                                            {{ order.created | formatDate }}
+                                        </span>
+                                    </div>
+                                </td>
+                                <td class="hidden-xs text-muted">{{ order.shippingAddress.email }}</td>
+                                <td class="hidden-xs text-muted">{{ order.created | formatDate }}</td>
+                            </tr>
+                        {% else %}
+                            <td colspan="100%">No orders</td>
+                        {% endfor %}
+                    </tbody>
+                </table>
 
                 {{ paginate.detailed(pagination) }}
             </div>
